# lv-ui-testing

./: .gitignore  README.md
doc/: layers.excalidraw  lv-architecture.drawio
src/lv/: LabVIEW UI Testing.vipb  lv-ui-testing.lvproj  main.vi  set value DBL.vi  start daemon.vi  test-0mq.vi  test-popup.vi  thomas_zilliox_lib_labview_ui_testing-1.0.0.6.vip  thomas_zilliox_lib_labview_ui_testing-1.1.0.7.vip  thomas_zilliox_lib_labview_ui_testing-1.1.1.8.vip  thomas_zilliox_lib_labview_ui_testing-1.2.0.9.vip  thomas_zilliox_lib_labview_ui_testing-1.2.1.10.vip  thomas_zilliox_lib_labview_ui_testing-1.2.2.11.vip  thomas_zilliox_lib_labview_ui_testing-1.2.2.12.vip  thomas_zilliox_lib_labview_ui_testing-1.3.0.13.vip  thomas_zilliox_lib_labview_ui_testing-1.4.0.14.vip  thomas_zilliox_lib_labview_ui_testing-1.5.0.15.vip  thomas_zilliox_lib_labview_ui_testing-2.0.0.15.vip  thomas_zilliox_lib_labview_ui_testing-2.0.1.16.vip  thomas_zilliox_lib_labview_ui_testing-2.0.2.17.vip  thomas_zilliox_lib_labview_ui_testing-2.0.3.18.vip  thomas_zilliox_lib_labview_ui_testing-2.0.4.19.vip  ui-testing.lvlib  win1.vi  win2.vi
src/lv/examples/: example 1 - plot.vi  example 10 - resolve data.vi  example 11 - tabs.vi  example 12 - enums.vi  example 13 - child.vi  example 13 - grand child.vi  example 13 - list.vi  example 14 - splitters.vi  example 2 - value.vi  example 3 - subpanel.vi  example 3 - subpanel1.vi  example 3 - subpanel2.vi  example 4 - string.vi  example 4b - child.vi  example 4b - grand child.vi  example 4b - string.vi  example 5 - child.vi  example 5 - grand child.vi  example 5 - parent.vi  example 6 - child.vi  example 6 - grand child.vi  example 6 - visibility.vi  example 7 - child.vi  example 7 - cluster.vi  example 7 - grand child.vi  example 8 - child.vi  example 9 - bool.vi  (+4 more)
src/python/: README.md  pyvenv.cfg  requirements.txt  setup.py  testVi.py
src/python/lv_ui_testing/: LICENSE.txt  README.md  _core.py  front_most_vi.py  front_most_window.py  lv_ui_testing.py  pyproject.toml  requirements.txt  setup.py  sub_panel.py  ui_testing.py
src/python/lv_ui_testing/src/lv_ui_testing/: front_most_vi.py  sub_panel.py  sub_sub_panel.py  ui_testing.py
src/python/lv_ui_testing/tests/: test_cluster.py  test_plots.py  test_string.py  test_sub_subpanels.py  test_subpanels.py  test_values.py  test_visbility.py
(+158 files in other folders)
