[project]
name = "lv_ui_testing"
version = "2.0.0"
authors = [
  { name="Thomas Zilliox", email="thomas.zilliox67@gmail.com" },
]
description = "A LabVIEW User Interface Testing framework."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyzmq==26.0.3",
    "xmltodict==0.14.2"
]

[project.urls]
Homepage = "https://github.com/ThomasPRZilliox/lv-ui-testing/wiki"
Issues = "https://github.com/pypa/sampleproject/issues"


